name:                 Something
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               pothocket
maintainer:           
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Something
  ghc-options:
    -threaded
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        linear, GPipe, lens, GPipe-GLFW, base == 4.9.*, time, transformers, containers
  hs-source-dirs:       src
  default-language:     Haskell2010
